--- a/writeup.html
+++ b/writeup.html
@@ -44,16 +44,11 @@
 
 <p><hr><p><a name='Translation'></a><h2>Translation</h2><p><hr><p>
 
-    This feature was implemented by the course staff. 
-    I used it as an example of how to loop over the vertices of a mesh.
-    <p>
-    Here is an example output where the mesh is translated
-    <a href='batch.html?meshFile=cube.obj&apply&translateX=3'>by 
-    3 along the x axis</a>:
-    <p>
-    <img src='results/translate3.png'>
-    <p>
-    I did not encounter any particular challenges in implementing this.
+
+<a href="raytracer.html?scene=menger">Menger Sponge</a>
+
+<a href="raytracer.html?scene=default">Infinite Spheres</a>
+
 
 <p><hr><p><a name='Rotation'></a><h2>Rotation</h2><p><hr><p>
 (Your description of Rotation goes here...)
