--- a/raytracer.html
+++ b/raytracer.html
@@ -6,13 +6,14 @@
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+    <script src="libjs/dat.gui.min.js"> </script>
     <script src="libjs/stats.min.js"> </script>
     <script src="libjs/three.min.js"> </script>
     <script src="libjs/OBJLoader.js"> </script>
     <script src="libjs/TrackballControls.js"> </script>
     <script src="libjs/glMatrix-0.9.5.min.js"> </script>
 	
-
+    <script src="js/gui.js"></script>
     <script src="js/raytracer.js"> </script>
     <script src="js/scene.js"> </script>
     <script src="js/student.js"> </script>
