--- a/raytracer.html
+++ b/raytracer.html
@@ -30,6 +30,7 @@
             <h2><a href="raytracer.html?scene=julia&animated=1">Julia 2D (pt1)</a></h2>
             <h2><a href="raytracer.html?scene=julia&value1=-.8&value2=0.156&animated=1">Julia 2D (pt2)</a>
             <h2><a href="raytracer.html?scene=julia3d&animated=1">Julia 3D</a></h2>
+            <h2><a href="raytracer.html?scene=apollonian&animated=1">Apollonian</a></h2>
         </div>
         <canvas id="canvas"> </canvas>
     </div>
