--- a/raytracer.html
+++ b/raytracer.html
@@ -27,8 +27,7 @@
             <h2><a href="raytracer.html?scene=default&animated=1">Bouncing Balls</a></h2>
             <h2><a href="raytracer.html?scene=menger&animated=1">Menger Sponge</a></h2>
             <h2><a href="raytracer.html?scene=mandelbrot&animated=1">Mandelbrot</a></h2>
-            <h2><a href="raytracer.html?scene=julia&animated=1">Julia 2D (pt1)</a></h2>
-            <h2><a href="raytracer.html?scene=julia&value1=-.8&value2=0.156&animated=1">Julia 2D (pt2)</a>
+            <h2><a href="raytracer.html?scene=julia&animated=1">Julia 2D</a></h2>
             <h2><a href="raytracer.html?scene=julia3d&animated=1">Julia 3D</a></h2>
             <h2><a href="raytracer.html?scene=apollonian&animated=1">Apollonian</a></h2>
         </div>
