--- a/raytracer.html
+++ b/raytracer.html
@@ -24,6 +24,10 @@
         <div id="title_div">
             <h1> <span class="assignment">COS426 Final Project<br></span> Rendering - RayTracer </h1>
             <h2 id="student"> </h2>
+            <form method="get">
+                <input id="music" type="file" name="music" accept="audio/*">
+                <input type="submit">
+            </form>
             <h2><a href="raytracer.html?scene=default&animated=1">Bouncing Balls</a></h2>
             <h2><a href="raytracer.html?scene=menger&animated=1">Menger Sponge</a></h2>
             <h2><a href="raytracer.html?scene=mandelbrot&animated=1">Mandelbrot</a></h2>
