--- a/testing/index.html
+++ b/testing/index.html
@@ -24,6 +24,7 @@
     <script src="js/parser.js"> </script>
     <script src="js/student.js"> </script>
     <script src="js/gui.js"> </script>
+    <script src="js/raymarcher.js"> </script>
     <script src="js/main.js"> </script>
 
 </body>
