--- a/batch.html
+++ b/batch.html
@@ -7,28 +7,26 @@
 </head>
 
 <body>
-    <script src="libjs/stats.min.js"></script>
-    <script src="libjs/three.min.js"></script>
-    <script src="libjs/TrackballControls.js"></script>
-
-    <script src="libjs/OBJLoader.js"></script>
-
-    <script src="js/gui.js"> </script>
-    <script src="js/parser.js"> </script>
-    <script src="js/renderer.js"></script>
-    <script src="js/scene.js"></script>
-    <script src="js/filters.js"></script>
+    <script src="libjs/dat.gui.min.js"> </script>
+    <script src="libjs/stats.min.js"> </script>
+    <script src="libjs/three.min.js"> </script>
+    <script src="libjs/OBJLoader.js"> </script>
+    <script src="libjs/TrackballControls.js"> </script>
+    <script src="libjs/glMatrix-0.9.5.min.js"> </script>
+    
+    <script src="js/gui.js"></script>
+    <script src="js/raytracer.js"> </script>
+    <script src="js/scene.js"> </script>
     <script src="js/student.js"> </script>
-    <script src="js/mesh.js"> </script>
-    <script src="js/meshStudent.js"> </script>
+    <script src="js/parser.js"> </script>
     <script src="js/batch.js"> </script>
 
     <div id="stats"></div>
     <div id="main_div">
         <h1> <span class="assignment">COS426 Assignment 2<br></span> Mesh Processing - Batch </h1>
         <h2 id="student"></h2>
-        <canvas id="canvas"> </canvas>
     </div>
+        <canvas id="canvas"> </canvas>
     <div id="alert_div" title="alert"> </div>
 
 </body>
