--- a/batch.html
+++ b/batch.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> COS426 Assignment 2 &mdash; Mesh Processing &mdash; Batch</title>
+    <title> COS426 Final Project</title>
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 
@@ -23,7 +23,7 @@
 
     <div id="stats"></div>
     <div id="main_div">
-        <h1> <span class="assignment">COS426 Assignment 2<br></span> Mesh Processing - Batch </h1>
+        <h1> <span class="assignment">COS426 Final Project<br></span> Fractals </h1>
         <h2 id="student"></h2>
     </div>
         <canvas id="canvas"> </canvas>
