--- a/raytracer.html
+++ b/raytracer.html
@@ -22,14 +22,8 @@
     
     <div id="main_div">
         <div id="title_div">
-            <h1> <span class="assignment">COS426 Final Project<br></span> Rendering - RayTracer </h1>
+            <h1> <span class="assignment">COS426 Final Project<br></span> Fractals </h1>
             <h2 id="student"> </h2>
-            <h2><a href="raytracer.html?scene=default&animated=1">Bouncing Balls</a></h2>
-            <h2><a href="raytracer.html?scene=menger&animated=1">Menger Sponge</a></h2>
-            <h2><a href="raytracer.html?scene=mandelbrot&animated=1">Mandelbrot</a></h2>
-            <h2><a href="raytracer.html?scene=julia&animated=1">Julia 2D</a></h2>
-            <h2><a href="raytracer.html?scene=julia3d&animated=1">Julia 3D</a></h2>
-            <h2><a href="raytracer.html?scene=apollonian&animated=1">Apollonian</a></h2>
         </div>
         <canvas id="canvas"> </canvas>
     </div>
