raytracer -> raymarcher. yikes

--- a/raymarcher.html
+++ b/raymarcher.html
@@ -14,11 +14,11 @@
     <script src="libjs/glMatrix-0.9.5.min.js"> </script>
 	
     <script src="js/gui.js"></script>
-    <script src="js/raytracer.js"> </script>
+    <script src="js/raymarcher.js"> </script>
     <script src="js/scene.js"> </script>
     <script src="js/student.js"> </script>
     <script src="js/parser.js"> </script>
-    <script src="js/main_rt.js"> </script>
+    <script src="js/main_rm.js"> </script>
     
     <div id="main_div">
         <div id="title_div">
