--- a/raymarcher2.html
+++ b/raymarcher2.html
@@ -22,10 +22,10 @@
     <script src="libjs/glMatrix-0.9.5.min.js"> </script>
 
     <script src="js/parser.js"> </script>
-    <script src="js/student.js"> </script>
-    <script src="js/gui.js"> </script>
-    <script src="js/raymarcher.js"> </script>
-    <script src="js/main.js"> </script>
+    <script src="js/student2.js"> </script>
+    <script src="js/gui2.js"> </script>
+    <script src="js/raymarcher2.js"> </script>
+    <script src="js/main2.js"> </script>
 
 </body>
 </html>
