--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <h1> COS426 Final Project &mdash; Fractals</h1>
         <h2 id='student'></h2>
         <table id="index-table">
-            <td> <a href="raytracer.html">  <img class="demoplot" src="results/infinitespheres.png"> <br> Raymarcher </a> </td>
+            <td> <a href="raymarcher.html">  <img class="demoplot" src="results/infinitespheres.png"> <br> Raymarcher 1 </a> </td>
+            <td> <a href="raymarcher2.html">  <img class="demoplot" src="results/infinitespheres.png"> <br> Raymarcher 2 </a> </td>
             <td> <a href="writeup.html">  <img class="demoplot" src="css/writeup.jpg"> <br> Writeup </a> </td>
         </table>
     </div>
