--- a/raymarcher.html
+++ b/raymarcher.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> COS426 Final Project &mdash; Rendering &mdash; RayTracer</title>
+    <title> Animated Fractals</title>
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
@@ -16,14 +16,12 @@
     <script src="js/gui.js"></script>
     <script src="js/raymarcher.js"> </script>
     <script src="js/scene.js"> </script>
-    <script src="js/student.js"> </script>
     <script src="js/parser.js"> </script>
     <script src="js/main_rm.js"> </script>
     
     <div id="main_div">
         <div id="title_div">
-            <h1> <span class="assignment">COS426 Final Project<br></span> Fractals </h1>
-            <h2 id="student"> </h2>
+            <h1>Animated Fractals</h1>
         </div>
         <canvas id="canvas"> </canvas>
     </div>
