--- a/index.html
+++ b/index.html
@@ -2,24 +2,20 @@
 <html>
 
 <head>
-    <title> COS426 Final Project &mdash; Rendering </title>
+    <title> COS426 Final Project &mdash; Fractalizer </title>
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
     <script src="libjs/dat.gui.min.js"> </script>
-    <script src="js/student.js"> </script>
-    <script> 
-    window.onload = function() {
-        Student.updateHTML(); 
-    }
-    </script>
     <div id="index-div">
-        <h1> COS426 Final Project &mdash; Fractals</h1>
-        <h2 id='student'></h2>
+        <h1> COS426 Final Project &mdash; Fractalizer</h1>
+        <h2>Rachel Margulies &lt;rachelbm&gt;<br>
+            Sonia Skoularikis &lt;sskoular&gt;<br>
+            Thomas Greenspan &lt;tgreensp&gt;</h2>
         <table id="index-table">
-            <td> <a href="raymarcher.html">  <img class="demoplot" src="results/infinitespheres.png"> <br> Raymarcher 1 </a> </td>
-            <td> <a href="raymarcher2.html">  <img class="demoplot" src="results/infinitespheres.png"> <br> Raymarcher 2 </a> </td>
+            <td> <a href="raymarcher.html">  <img class="demoplot" src="results/infinitespheres.png"> <br> Animated Fractals</a> </td>
+            <td> <a href="raymarcher2.html">  <img class="demoplot" src="results/infinitespheres.png"> <br>  Interactive 3D Julia Set</a> </td>
             <td> <a href="writeup.html">  <img class="demoplot" src="css/writeup.jpg"> <br> Writeup </a> </td>
         </table>
     </div>
