--- a/writeup.html
+++ b/writeup.html
@@ -24,6 +24,7 @@
 <li><a href='#Methodology'>Methodology</a></li>
 <ul>
 <li><a href='#ImplementationDecisions'>Implementation Decisions</a></li>
+<li><a href='#Challenges'>Challenges</a></li>
 </ul>
 <li><a href='#Results'>Results</a></li>
 <li><a href='#Discussion'>Discussion</a></li>
@@ -48,7 +49,7 @@ Our project relies on GLSL shaders running in the browser and should be accessed
 <p><hr><p><a name='Methodology'></a><h1>Methodology</h1><p><hr><p>
 <a name='ImplementationDecisions'></a><h2>Implementation Decisions</h2>
 <ul>
-<li><h3>Raymarching vs. Path tracing</h3>
+<li><h3>Raymarching vs. Path Tracing</h3>
 The primary reason for choosing raymarching over path tracing was that we had access to the infrastructure for a functional raytracer. Using this code as a starting point, we were able to convert the raytracer to a raymarcher with relative ease.
 </li>
 <li><h3>Calculating Surface Normals</h3>
@@ -57,10 +58,49 @@ To find the surface normals needed for the specular color calculation, there wer
 <li><h3>Bounding Volumes</h3>
 One optimization our raymarcher performs is to first intersect the ray with a bounding sphere. If the ray fails to hit the sphere containing the fractal, we can immediately return the default color rather than marching the ray. However, we were then faced with the trade-off of using bounding volumes close enough to the fractal surface to optimize the raymarcher, but far enough to avoid cutting off areas of the fractal we wish users to view.</li>
 <li><h3>Ambient Occlusion vs. Environment Lighting</h3>
-Ambient occlusion approximates the effects of environment lighting by scaling the diffuse color based on the number of steps taken in marching the ray before intersecting the surface. We chose this alternative because </li>
+Ambient occlusion approximates the effects of environment lighting by scaling the diffuse color based on the number of steps taken in marching the ray before intersecting the surface. We chose this alternative because it is much cheaper computationally.</li>
+<li><h3>Julia & Mandelbrot - 2D vs. 3D</h3>
+Currently, we have implemented 2D Julia sets and the Mandelbrot set as 2D surfaces embedded in 3D, as opposed to extending our raymarcher to have the capacity to render 2D scenes. The decision here was made based on project scope and time constraints. The main factor was that we only began to build out these 2D fractals in an attempt to better understand the higher dimensional counterparts. Considering that our goal was an interactive 3D environment, we chose to focus on extending the truly 3D aspects of the project rather than improving the 2D versions.</li>
+<li><h3>Julia & Mandelbrot - Coloring by Iterations</h3>
+Though in our existing implementation the hue of the diffuse color depends on the number of iterations, we are not currently tracking the range of iterations in each frame as a whole. Therefore we found visually appealing ranges to scale the number of iterations by simply through trial and error. We might instead construct a histogram of iterations for each pixel to have finer control over the coloring.
+</li>
+<li><h3>Julia & Mandelbrot - Terminal Condition</h3>
+In the distance estimation functions for Julia and Mandelbrot, we break out of the recursion if the complex modulus of second complex number becomes too large. Tweaking the definition of 'too large' is essentially a trade-off between the visuals and the speed of the animations, since lowering the cutoff shortens the distance calculation. The following image shows a single frame of the animated Mandelbrot set with a cutoff of 1e20.
+<p>
+<img src='results/mandelbrot1e20.png'>
+<p>
+Though this version does include the external rings, the animation runs far slower. If we adjust the cutoff to be 1e8, the animation runs noticably more smoothly, however the external rings have vanished.
+<p>
+<img src='results/mandelbrot1e8.png'>
+<p>
+</li>
+<li><h3>Zoom - Standard vs. Diminishing</h3>
+We chose to implement zooming in the z-direction so that the zoom steps are proportional to the amount the user has already zoomed in. The alternative - translating by a constant amount along the z-axis - moves the view through the objects in the scene (typically centered at the origin) rather than approaching them.
+</li>
 </ul>
 <a name='Challenges'></a><h2>Challenges</h2>
-<a name='Bugs'></a><h2>Bugs</h2>
+<ul>
+<li><h3>Passing Audio Data to GLSL - Arrays vs. Textures</h3>
+Although GLSL does have the capacity to take in uniform arrays, there are a couple of critical limitations. Specifically, arrays in GLSL can only be accessed by constant indices. This poses problems when trying to draw different audio samples based on a given parameter (i.e. changing the index of the audio array according to the distance from the origin, as in the Menger sponge animation). Furthermore, GLSL limits the size of arrays which can be passed in through this method. A quick google search led us to <a href='http://www.john-smith.me/hassles-with-array-access-in-webgl--and-a-couple-of-workarounds'>John Smith's tutorial</a> for an effective, albeit 'hacky' alternative of storing typed arrays in the RGBA values for a sampler2D texture. Though setting and retrieving the values is undeniably more complex, we can circumnavigate the disadvantages of GLSL arrays.
+</li>
+<li><h3>Multidimensional Audio Data</h3>
+Another challenge we experienced in the course of this assignment was mapping our multidimensional audio data to fractal or animation parameters with either one or two dimensions. We found that simply fixing an index of the audio data to utilize was a flawed solution since the animation would appear still during sections of the music where that aspect of the audio data was static. This translated into an animation which was visually interpreted to have 'lag'. To avoid this, we often used another dimension of the fractal to map to an index of the audio data. For instance, for Mandelbrot we used the number of iterations, while for the Menger sponge we adjusted each pixel's audio index relative to the distance from the origin.
+</li>
+<li><h3>Infinite Spheres - Breaking</h3>
+This bug manifested in the animated version of the field of infinite spheres. Due to the nature of replicating the spheres (by taking the modulus of the position in the x,z-directions), if the height changes were too drastic the spheres would break as shown in the image below.
+<p>
+<img src='results/breakingspheres.png'>
+<p>
+We fixed this by adjusting the height changes to be less drastic, however a more permanent solution would be to try shifting the spheres in the y-direction at an earlier point in the code to ensure they do not overwrite one another.
+</li>
+<li><h3>Menger Sponge - Slicing</h3>
+Our initial implementation of the menger sponge exhibited a 'slicing' behavior, as shown in the following image.
+<p>
+<img src='results/slicingmenger.png'>
+<p>
+Ultimately, we discovered that slicing occured as we approach the interior of the sponge, and found that decreasing the camera's field of view (FOV) eliminated this issue.
+</li>
+</ul>
 
 <p><hr><p><a name='Results'></a><h1>Results</h1><p><hr><p>
 We measured success qualitatively based on the resolution of our rendering, the speed of the animation, and the extent to which the visualizer seemed representative of the music. We tested our final project on computers with 8, 16, and 32GB of RAM and observed the expected trend that increasing RAM allowed for higher resolution, faster animations. Overall, our results indicate that we would need to further optimize our distance estimation functions in order to better accomodate users with less RAM.
