--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             Sonia Skoularikis &lt;sskoular&gt;<br>
             Thomas Greenspan &lt;tgreensp&gt;</h2>
         <table id="index-table">
-            <td> <a href="raymarcher.html">  <img class="demoplot" src="results/infinitespheres.png"> <br> Animated Fractals</a> </td>
-            <td> <a href="raymarcher2.html">  <img class="demoplot" src="results/infinitespheres.png"> <br>  Interactive 3D Julia Set</a> </td>
+            <td> <a href="raymarcher.html">  <img class="demoplot" src="results/julia3d2.png"> <br> Animated Fractals</a> </td>
+            <td> <a href="raymarcher2.html">  <img class="demoplot" src="results/interactivejulia1.png"> <br>  Interactive 3D Julia Set</a> </td>
             <td> <a href="writeup.html">  <img class="demoplot" src="css/writeup.jpg"> <br> Writeup </a> </td>
         </table>
     </div>
