--- a/writeup.html
+++ b/writeup.html
@@ -104,6 +104,46 @@ Ultimately, we discovered that slicing occured as we approach the interior of th
 
 <p><hr><p><a name='Results'></a><h1>Results</h1><p><hr><p>
 We measured success qualitatively based on the resolution of our rendering, the speed of the animation, and the extent to which the visualizer seemed representative of the music. We tested our final project on computers with 8, 16, and 32GB of RAM and observed the expected trend that increasing RAM allowed for higher resolution, faster animations. Overall, our results indicate that we would need to further optimize our distance estimation functions in order to better accomodate users with less RAM.
+
+<ul>
+<li><h3>Infinite Spheres</h3></li>
+<p>
+<img src='results/spheres.png'>
+<p>
+Color and height (by manhattan distance to center sphere) dependent on audio.
+<li><h3>Menger Sponge</h3></li>
+<p>
+<img src='results/menger.png'>
+<p>
+Color (by distance to origin) dependent on audio.
+<li><h3>Mandelbrot</h3></li>
+<p>
+<img src='results/mandelbrotstandard.png'>
+<p>
+Color (by ratio of iterations) dependent on audio.
+<li><h3>Julia 2D</h3></li>
+<p>
+<img src='results/julia2d3.png'>
+<p>
+Color (by ratio of iterations) and values for the second complex number (single audio indices for real and imaginary coordinates) dependent on audio.
+<li><h3>Julia 3D</h3></li>
+<p>
+<img src='results/julia3d2.png'>
+<p>
+<li><h3>Interactive Julia 3D</h3></li>
+Color (by ratio of iterations) and values for the imaginary part of the second complex number (single audio index) dependent on audio.
+<p>
+<img src='results/interactivejulia2.png'>
+<p>
+No audio.
+<li><h3>Apollonian Gasket</h3></li>
+<p>
+<img src='results/apollonian2.png'>
+<p>
+Scaling dependent on audio (single audio index).
+</ul>
+
+
 <p><hr><p><a name='Discussion'></a><h1>Discussion</h1><p><hr><p>
 In general, our approach was successful in that we were able to create a fractal-based sound visualizer where audio inputs alter the nature of the generated images. However, there are obvious limitations to this approach. Of the implementation decisions discussed above, in a few cases we chose alternatives based on the time constraints of the project rather than the success of the output. For instance, given additional time, we would prefer to implement a 2D analog of the ray marcher to render the Mandelbrot set and the 2D Julia sets as 2D images rather than 2D surfaces embedded in three dimensions. Furthermore, the coloring for the Julia and Mandelbrot sets is currently based purely on the number of iterations. However, scaling presents challenges since we do not know the range of iterations ahead of time. A common coloring scheme creates a histogram of iterations in order to adjust the coloring more accurately. 
 <p>
