--- a/raymarcher.html
+++ b/raymarcher.html
@@ -21,7 +21,7 @@
     
     <div id="main_div">
         <div id="title_div">
-            <h1>Animated Fractals</h1>
+            <!-- <h1>Animated Fractals</h1> -->
         </div>
         <canvas id="canvas"> </canvas>
     </div>
